--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <p>Somewhere in Iceland 02</p>
         <img src="images/overlay.png" alt="" class="overlay" />
       </div>
+      <div class="carousel-item">
+        <img
+          src="https://images.unsplash.com/photo-1609807585896-d19cb2c47cf8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1020&q=80"
+          alt="the black sand beach"
+        />
+        <p>Happy New Year</p>
+        <img src="images/overlay.png" alt="" class="overlay" />
+      </div>
       <div class="carousel-controls">
         <div class="carousel-buttons">
           <button class="carousel-previous-btn" aril-label="previous button"><</button>
